--- a/usermanagement.css
+++ b/usermanagement.css
@@ -458,183 +458,125 @@ body.dark .circle-wrap .circle .mask .fill{
 
 
 
+/* ===== User Management CSS ===== */
 
-
-
-
- /* ===== Hammilan css ===== */
-
-
-
-body {
-    background: var(--body-color);
+.image-size img{
+    display:inline-block;
+    object-fit: cover;
+    width: 100px;
+    height: 100px;
     
+    border-radius: 50%;
+    margin-bottom: -5px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
     
-  }
+}
 
-
-
-  .container{
-    margin-left: 230px;
-    margin-top: 30px;
-  }
-
-  .container h2.text{
-    font-size: 35px;
-    margin-left: 100px;
-    margin-top: -20px;
-    padding-bottom: 20px;
-  }
-
-  .container .form-group{
-    display: inline-flex;
-    flex-direction: column;
-    padding: 0 -100px;
-    width: 43%;
-    flex-wrap: wrap;
+.table-responsive{
     
-  }
+    margin-top: 60px;
+    margin-left: 320px;
+    max-width: 80%;
+    border: 1px solid black;
+     background-color: #f8f8f8;
+     padding: 1px;
+     overflow: auto;
+     border-collapse: collapse;
+     text-align: center;
+     
 
+}
 
-
-  .container .form-control{
-    display: flex;
-    justify-content: space-around;
-    margin-left: 100px;
-    width: 100%;
-    height: 40px;
-    margin-bottom: 12px;
-    padding-left: 10px;
-    flex-wrap: wrap;
-
-  }
-
-  .container label{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    margin-left: 105px;
-    flex-wrap: wrap;
-    
-    
-
-  }
-
-  
-
-  
-  button {
-    background-color: royalblue;
-    border: none;
-    color: black;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 1px 2px;
-    cursor: pointer;
-    border-radius: 7px;
-  }
-
-  .button {
-    border: none;
-    color: white;
-    padding: 16px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
+.container-3 .table-thead{
+   width: 100%;
     font-size: 16px;
-    margin: 4px 2px;
-    transition-duration: 0.4s;
-    cursor: pointer;
-    margin-left: 70px;
+    padding: 5px;
+    color: black;
+    
+    white-space: nowrap;
+    align-items: center;
+
+}
+
+.container-3 .table-thead .headert .table-name{
+    background-color: #695CFE;
+    width: 100%;
+    padding: 5px;
+    align-items: center;
+    text-align: center;
+  
+
+
+}
+
+
+.container-3 .table-thead thead.headert th.table-name, td{
+    border: 1px solid rgb(197, 197, 197);
+    
+    
+
+
+}
+
+
+
+
+
+
+
+.action-btn{
+    display: flex;
+    
+    justify-content: center;
+    gap: 15px;
+    
+}
+
+.action-btn a{
+    text-decoration: none;
+    color: #3a3b3c;
+    display:inline-block;
+    padding: 5px 20px;
+    border-radius: 3px;
+    font-weight: 700;
+    font-size: 12px;
+    border: 1px solid black;
+    transition: 0.3s ease-in-out;
+    
+}
+
+.action-btn a:hover{
+    background-color: #695CFE;
+}
+
+.container-3 hr{
+
+    margin-top: 1px;
+    
+    color: var(--text-color);
+    width: 100%;
+    margin-left: 60px;
   }
 
-  button.btn-btn{
-    margin-left: 1px;
-    
-    
-    
+  .container-3 h2.text{
+    font-size: 35px;
+    margin-left: 320px;
+    margin-top: 17px;
+    padding-bottom: 30px;
+    color: var(--text-color);
   }
 
-  button.btn-btn1{
-    width: 110px;
-    margin-left: 30px;
-    
-    
+
+  .sidebar.open ~ .container-3 h2.text{
+         margin-left: 120px;
   }
 
-  .button:hover {opacity: 1}
 
-  #Update {
-    display: none;
-  }
- 
-
-  .table-bordered {
-    border-collapse: collapse;
-    width: 85%;
-    border: 1px solid;
-    margin-left: 150px;
-    
+  .sidebar.open ~ .container-3 .table-responsive{
+    margin-left:7%;
+    max-width: 90%;
   }
   
-  th{
-    padding: 0px;
-    text-align: center;
-    padding-left: 3px;
-    border: 1px solid black;
-  }
-
-  td{
-    padding: 0px;
-    text-align: center;
-    padding-left: 3px;
-    border: 1px solid black;
-    flex-wrap: wrap;
-    
-    
-    
-  }
-
-  .container h3.text{
-    
-    font-size: 28px;
-    margin-left: 660px;
-    margin-top: 20px;
-    margin-bottom: 10px;
-  }
-  
-  body.dark th{
-    border-color: var(--text-color);
-    color: var(--text-color);
-  }
-
-  body.dark td{
-    border-color: var(--text-color);
-    color: var(--text-color);
-  }
-
-  body.dark label{
-    color: var(--text-color);
-  }
-
-  body.dark h2.text{
-    color: var(--text-color);
-  }
-  body.dark h3{
-    color: var(--text-color);
-  }
-
-  .sidebar.open ~ .container{
-
-    margin-left: 50px;
-  }
-
-  .sidebar.open ~ .container h2.text{
-    margin-left: 100px;
-  }
-
-
-
 
 /* ===== LOGOUT ===== */
 
@@ -642,7 +584,7 @@ body {
 
 
   .modal-box{
-    position: absolute;
+   position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -705,3 +647,36 @@ body.active .modal-box{
     pointer-events: auto;
     
 }
+
+.sidebar.open ~ .container-2 .row{
+    display: flex;
+    
+   
+    
+}
+
+.sidebar.open ~ .container-2 .row .column{
+    margin-left: 240px;
+    margin-bottom: 50px;
+    
+
+  }
+
+  .sidebar.open ~ .container-2 .lgo{
+    margin-left: -120%;
+  }
+
+  .sidebar.open ~ .container-2 .company{
+    margin-left: 100px;
+    font-size: 25px;
+  }
+
+  .sidebar.open ~ .container-2 h2 small{
+    margin-left: 100px;
+
+  }
+
+  .sidebar.open ~ .container-2 .opening-spiel{
+    width: 90%;
+    margin-left: 120px;
+  }
